--- a/comicstore-web/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/comicstore-web/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -11,6 +11,8 @@
 		</ui:insert>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<h:outputStylesheet name="css/reset.css" />
+		<h:outputStylesheet name="css/default/layout.css" />
+		<h:outputStylesheet name="css/default/style.css" />
 	</h:head>
 	<h:body>
 		<header>
